--- a/index.html
+++ b/index.html
@@ -1156,7 +1156,7 @@
             <a href="#contact" class="cta-button">Schedule a Consultation</a>
         </div>
         <div class="hero-image-container">
-            <img src="../ASSIGNMENT/Dr. Maya Reynolds.png" alt="Professional woman in modern office - Santa Monica therapy" class="hero-image">
+            <img src="Dr. Maya Reynolds.png" alt="Professional woman in modern office - Santa Monica therapy" class="hero-image">
         </div>
     </section>
 
@@ -1175,7 +1175,7 @@
         </div>
         <div class="services-grid">
             <div class="service-card">
-                <img src="../ASSIGNMENT/office1.jpeg" alt="Anxiety therapy Santa Monica - woman journaling peacefully" class="service-image">
+                <img src="office1.jpeg" alt="Anxiety therapy Santa Monica - woman journaling peacefully" class="service-image">
                 <div class="service-content">
                     <h3>Anxiety & Panic Therapy</h3>
                     <p>I work with clients who experience persistent worry, panic attacks, difficulty sleeping, or a sense that they're always bracing for something to go wrong. My approach helps you understand both the emotional and physiological sides of what you're experiencing.</p>
@@ -1220,7 +1220,7 @@
 
     <!-- Approach Section -->
     <section class="approach-section">
-        <img src="../ASSIGNMENT/office1.jpeg" alt="Dr. Maya Reynolds therapy office Santa Monica" class="approach-image">
+        <img src="office1.jpeg" alt="Dr. Maya Reynolds therapy office Santa Monica" class="approach-image">
         <div class="approach-content">
             <h2>My Approach to Therapy</h2>
             <p>I take a warm, collaborative, and grounded approach to therapy. Sessions are structured enough to be supportive, while still leaving space for reflection and depth. I integrate evidence-based methods to help clients understand both the emotional and physiological sides of what they're experiencing.</p>
